[gd_scene load_steps=15 format=3 uid="uid://bml4q5qb355uv"]

[ext_resource type="Theme" uid="uid://d1we2b40pcdj3" path="res://heng_theme.tres" id="1_dgpfb"]
[ext_resource type="Script" uid="uid://lwyf2p6nmxy0" path="res://src/menus/question_menu.gd" id="2_txomd"]
[ext_resource type="Texture2D" uid="uid://dtxxj8vtbqia5" path="res://assets/craiyon_201508_game_menu_background_about_luck_with_coin_and_make_it_a_little_chinese.png" id="3_nikut"]
[ext_resource type="FontFile" uid="uid://dmhyp18qwyv2x" path="res://assets/GrapeSoda.ttf" id="4_wqk3d"]
[ext_resource type="FontFile" uid="uid://1n4u4cnvpriu" path="res://assets/fonts/Poppins/Poppins-ExtraBold.ttf" id="5_v0cwj"]
[ext_resource type="FontFile" uid="uid://c0xk23434xmmm" path="res://assets/fonts/Poppins/Poppins-ExtraBoldItalic.ttf" id="6_3xebw"]
[ext_resource type="AudioStream" uid="uid://fxr0clxhnf3p" path="res://assets/sfx/hover-card.wav" id="7_62n68"]
[ext_resource type="AudioStream" uid="uid://dij4vqeiofdjt" path="res://assets/sfx/click.wav" id="8_i57vy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s57lp"]
texture = ExtResource("3_nikut")
modulate_color = Color(0.34902, 0.34902, 0.34902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7qkn2"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l1nce"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ic1x6"]
bg_color = Color(0.208041, 3.95575e-07, 0.00685114, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0
shadow_size = 2
shadow_offset = Vector2(7, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fj3sb"]
bg_color = Color(0.158607, 3.41428e-07, 0.00415704, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0
shadow_size = 2
shadow_offset = Vector2(7, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvdy2"]
bg_color = Color(0.293791, 0, 0.013485, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0
shadow_size = 2
shadow_offset = Vector2(7, 5)

[node name="QuestionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dgpfb")
script = ExtResource("2_txomd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_s57lp")

[node name="Question" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -206.0
offset_top = 86.0
offset_right = 207.0
offset_bottom = 206.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("4_wqk3d")
theme_override_font_sizes/font_size = 100
text = "Question"
horizontal_alignment = 1

[node name="Status" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -254.0
offset_top = 270.0
offset_right = 255.0
offset_bottom = 298.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_v0cwj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.5
offset_top = -4.5
offset_right = 254.5
offset_bottom = 274.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Answer" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(0.568585, 0.599322, 0.571292, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_3xebw")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_7qkn2")
placeholder_text = "Answer"

[node name="DateInputContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Day" type="LineEdit" parent="VBoxContainer/DateInputContainer"]
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(0.568585, 0.599322, 0.571292, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_3xebw")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_7qkn2")
placeholder_text = "Day"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/DateInputContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_dgpfb")

[node name="Month" type="LineEdit" parent="VBoxContainer/DateInputContainer"]
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(0.568585, 0.599322, 0.571292, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_3xebw")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_7qkn2")
placeholder_text = "Month"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/DateInputContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Year" type="LineEdit" parent="VBoxContainer/DateInputContainer"]
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(0.568585, 0.599322, 0.571292, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_3xebw")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_7qkn2")
placeholder_text = "Year"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Previous" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("5_v0cwj")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_l1nce")
theme_override_styles/hover = SubResource("StyleBoxFlat_ic1x6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fj3sb")
theme_override_styles/normal = SubResource("StyleBoxFlat_kvdy2")
text = "Previous"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Next" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("5_v0cwj")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_l1nce")
theme_override_styles/hover = SubResource("StyleBoxFlat_ic1x6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fj3sb")
theme_override_styles/normal = SubResource("StyleBoxFlat_kvdy2")
text = "Next"

[node name="Hover-card" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_62n68")

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_i57vy")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Next" to="." method="_on_next_pressed"]
